# runbook-assistant

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
runbook_index/: index.faiss  index.pkl  manifest.json
static/runbooks/: authorizationLatency.txt
