[project]
name = "runbook-assistant"
version = "0.1.0"
description = "RAG-powered runbook assistant for incident response"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.49.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "PyMuPDF>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
